// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createDeposit creates a deposit for a book 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "book": Object {
          "@book_type": "other",
          "book_metadata": Object {
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Massachusetts Institute of Technology",
                  "given_name": "Travis",
                  "surname": "Rich",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Gabriel",
                  "surname": "Stein",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Catherine",
                  "surname": "Ahearn",
                },
                Object {
                  "@contributor_role": "author",
                  "@sequence": "additional",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
              ],
            },
            "doi_data": Object {
              "doi": "an_utterly_fake_doi",
              "resource": "https://test.com",
              "timestamp": 1555009335577,
            },
            "edition_number": "3",
            "isbn": "this_is_an_isbn",
            "publication_date": Object {
              "@media_type": "online",
              "day": "02",
              "month": "03",
              "year": "2015",
            },
            "publisher": Object {
              "publisher_name": "PubPub",
            },
            "titles": Object {
              "title": "My new book full of pubs",
            },
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "pubpub@media.mit.edu",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": "an_utterly_fake_doi",
    "community": "10.21428/eea8ec7d",
    "pub": undefined,
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for a book without any date information 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "book": Object {
          "@book_type": "other",
          "book_metadata": Object {
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Massachusetts Institute of Technology",
                  "given_name": "Travis",
                  "surname": "Rich",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Gabriel",
                  "surname": "Stein",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Catherine",
                  "surname": "Ahearn",
                },
                Object {
                  "@contributor_role": "author",
                  "@sequence": "additional",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
              ],
            },
            "doi_data": Object {
              "doi": "an_utterly_fake_doi",
              "resource": "https://test.com",
              "timestamp": 1555009335577,
            },
            "edition_number": "3",
            "isbn": "this_is_an_isbn",
            "publication_date": Object {
              "@media_type": "online",
              "day": "11",
              "month": "04",
              "year": "2019",
            },
            "publisher": Object {
              "publisher_name": "PubPub",
            },
            "titles": Object {
              "title": "My new book full of pubs",
            },
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "pubpub@media.mit.edu",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": "an_utterly_fake_doi",
    "community": "10.21428/eea8ec7d",
    "pub": undefined,
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for a conference 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "conference": Object {
          "contributors": Object {
            "person_name": Array [
              Object {
                "@contributor_role": "author",
                "@sequence": "first",
                "affiliation": "Massachusetts Institute of Technology",
                "given_name": "Travis",
                "surname": "Rich",
              },
              Object {
                "@contributor_role": "reader",
                "@sequence": "additional",
                "given_name": "Gabriel",
                "surname": "Stein",
              },
              Object {
                "@contributor_role": "reader",
                "@sequence": "additional",
                "given_name": "Catherine",
                "surname": "Ahearn",
              },
              Object {
                "@contributor_role": "author",
                "@sequence": "additional",
                "affiliation": "Springfield A&M",
                "given_name": "Ian",
                "surname": "Reynolds",
              },
            ],
          },
          "event_metadata": Object {
            "conference_acronym": "TCIHA",
            "conference_date": Object {
              "#text": "2019-05-01",
            },
            "conference_location": "Kalamazoo, MI",
            "conference_name": "This Conference Is Happening Again",
            "conference_theme": "We love conferences don't we",
          },
          "proceedings_metadata": Object {
            "doi_data": Object {
              "doi": "yes_it_is_a_conference_doi",
              "resource": "https://dev.pubpub.org/collection/4c3a0515",
              "timestamp": 1555009335577,
            },
            "noisbn": Object {
              "@reason": "archive_volume",
            },
            "proceedings_title": "This Conference Is Happening Again",
            "publication_date": Object {
              "@media_type": "online",
              "day": "01",
              "month": "05",
              "year": "2019",
            },
            "publisher": Object {
              "publisher_name": "PubPub",
            },
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "pubpub@media.mit.edu",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": "yes_it_is_a_conference_doi",
    "community": "10.21428/eea8ec7d",
    "pub": undefined,
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for a conference without any date information 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "conference": Object {
          "contributors": Object {
            "person_name": Array [
              Object {
                "@contributor_role": "author",
                "@sequence": "first",
                "affiliation": "Massachusetts Institute of Technology",
                "given_name": "Travis",
                "surname": "Rich",
              },
              Object {
                "@contributor_role": "reader",
                "@sequence": "additional",
                "given_name": "Gabriel",
                "surname": "Stein",
              },
              Object {
                "@contributor_role": "reader",
                "@sequence": "additional",
                "given_name": "Catherine",
                "surname": "Ahearn",
              },
              Object {
                "@contributor_role": "author",
                "@sequence": "additional",
                "affiliation": "Springfield A&M",
                "given_name": "Ian",
                "surname": "Reynolds",
              },
            ],
          },
          "event_metadata": Object {
            "conference_acronym": "TCIHA",
            "conference_date": Object {
              "#text": "2019-04-11",
            },
            "conference_location": "Kalamazoo, MI",
            "conference_name": "This Conference Is Happening Again",
            "conference_theme": "We love conferences don't we",
          },
          "proceedings_metadata": Object {
            "doi_data": Object {
              "doi": "yes_it_is_a_conference_doi",
              "resource": "https://dev.pubpub.org/collection/4c3a0515",
              "timestamp": 1555009335577,
            },
            "noisbn": Object {
              "@reason": "archive_volume",
            },
            "proceedings_title": "This Conference Is Happening Again",
            "publication_date": Object {
              "@media_type": "online",
              "day": "11",
              "month": "04",
              "year": "2019",
            },
            "publisher": Object {
              "publisher_name": "PubPub",
            },
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "pubpub@media.mit.edu",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": "yes_it_is_a_conference_doi",
    "community": "10.21428/eea8ec7d",
    "pub": undefined,
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for a pub 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "journal": Object {
          "journal_article": Object {
            "@publication_type": "full_text",
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Kevin",
                  "surname": "Bentham",
                },
              ],
            },
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d.1519656b",
              "resource": "https://frankdev.pubpub.org/pub/h2muzdpv",
              "timestamp": 1555009335577,
            },
            "publication_date": Object {
              "@media_type": "online",
              "day": "01",
              "month": "03",
              "year": "2019",
            },
            "titles": Object {
              "title": "In Which Ian Makes A Pub",
            },
          },
          "journal_metadata": Object {
            "@language": "en",
            "abbrev_title": "PubPub Dev",
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d",
              "resource": "https://frankdev.pubpub.org",
              "timestamp": 1555009335577,
            },
            "full_title": "PubPub Dev",
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "pubpub@media.mit.edu",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": undefined,
    "community": "10.21428/eea8ec7d",
    "pub": "10.21428/eea8ec7d.1519656b",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for a pub in a book 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "book": Object {
          "@book_type": "other",
          "book_metadata": Object {
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Massachusetts Institute of Technology",
                  "given_name": "Travis",
                  "surname": "Rich",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Gabriel",
                  "surname": "Stein",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Catherine",
                  "surname": "Ahearn",
                },
                Object {
                  "@contributor_role": "author",
                  "@sequence": "additional",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
              ],
            },
            "doi_data": Object {
              "doi": "an_utterly_fake_doi",
              "resource": "https://test.com",
              "timestamp": 1555009335577,
            },
            "edition_number": "3",
            "isbn": "this_is_an_isbn",
            "publication_date": Object {
              "@media_type": "online",
              "day": "02",
              "month": "03",
              "year": "2015",
            },
            "publisher": Object {
              "publisher_name": "PubPub",
            },
            "titles": Object {
              "title": "My new book full of pubs",
            },
          },
          "content_item": Object {
            "@component_type": "chapter",
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Kevin",
                  "surname": "Bentham",
                },
              ],
            },
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d.1519656b",
              "resource": "https://frankdev.pubpub.org/pub/h2muzdpv",
              "timestamp": 1555009335577,
            },
            "publication_date": Object {
              "@media_type": "online",
              "day": "01",
              "month": "03",
              "year": "2019",
            },
            "titles": Object {
              "title": "In Which Ian Makes A Pub",
            },
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "pubpub@media.mit.edu",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": "an_utterly_fake_doi",
    "community": "10.21428/eea8ec7d",
    "pub": "10.21428/eea8ec7d.1519656b",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for a pub in a conference 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "conference": Object {
          "conference_paper": Object {
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Kevin",
                  "surname": "Bentham",
                },
              ],
            },
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d.1519656b",
              "resource": "https://frankdev.pubpub.org/pub/h2muzdpv",
              "timestamp": 1555009335577,
            },
            "titles": Object {
              "title": "In Which Ian Makes A Pub",
            },
          },
          "contributors": Object {
            "person_name": Array [
              Object {
                "@contributor_role": "author",
                "@sequence": "first",
                "affiliation": "Massachusetts Institute of Technology",
                "given_name": "Travis",
                "surname": "Rich",
              },
              Object {
                "@contributor_role": "reader",
                "@sequence": "additional",
                "given_name": "Gabriel",
                "surname": "Stein",
              },
              Object {
                "@contributor_role": "reader",
                "@sequence": "additional",
                "given_name": "Catherine",
                "surname": "Ahearn",
              },
              Object {
                "@contributor_role": "author",
                "@sequence": "additional",
                "affiliation": "Springfield A&M",
                "given_name": "Ian",
                "surname": "Reynolds",
              },
            ],
          },
          "event_metadata": Object {
            "conference_acronym": "TCIHA",
            "conference_date": Object {
              "#text": "2019-05-01",
            },
            "conference_location": "Kalamazoo, MI",
            "conference_name": "This Conference Is Happening Again",
            "conference_theme": "We love conferences don't we",
          },
          "proceedings_metadata": Object {
            "doi_data": Object {
              "doi": "yes_it_is_a_conference_doi",
              "resource": "https://dev.pubpub.org/collection/4c3a0515",
              "timestamp": 1555009335577,
            },
            "noisbn": Object {
              "@reason": "archive_volume",
            },
            "proceedings_title": "This Conference Is Happening Again",
            "publication_date": Object {
              "@media_type": "online",
              "day": "01",
              "month": "05",
              "year": "2019",
            },
            "publisher": Object {
              "publisher_name": "PubPub",
            },
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "pubpub@media.mit.edu",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": "yes_it_is_a_conference_doi",
    "community": "10.21428/eea8ec7d",
    "pub": "10.21428/eea8ec7d.1519656b",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for a pub in an issue 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "journal": Object {
          "journal_article": Object {
            "@publication_type": "full_text",
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Kevin",
                  "surname": "Bentham",
                },
              ],
            },
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d.1519656b",
              "resource": "https://frankdev.pubpub.org/pub/h2muzdpv",
              "timestamp": 1555009335577,
            },
            "publication_date": Object {
              "@media_type": "online",
              "day": "01",
              "month": "03",
              "year": "2019",
            },
            "titles": Object {
              "title": "In Which Ian Makes A Pub",
            },
          },
          "journal_issue": Object {
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Massachusetts Institute of Technology",
                  "given_name": "Travis",
                  "surname": "Rich",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Gabriel",
                  "surname": "Stein",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Catherine",
                  "surname": "Ahearn",
                },
                Object {
                  "@contributor_role": "author",
                  "@sequence": "additional",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
              ],
            },
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d.e281f63f",
              "resource": "https://dev.pubpub.org/collection/e281f63f",
              "timestamp": 1555009335577,
            },
            "issue": "5",
            "journal_volume": Object {
              "volume": "2",
            },
            "publication_date": Object {
              "@media_type": "online",
              "day": "25",
              "month": "03",
              "year": "2017",
            },
            "titles": Object {
              "title": "Another Great Issue",
            },
          },
          "journal_metadata": Object {
            "@language": "en",
            "abbrev_title": "PubPub Dev",
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d",
              "resource": "https://frankdev.pubpub.org",
              "timestamp": 1555009335577,
            },
            "full_title": "PubPub Dev",
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "pubpub@media.mit.edu",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": "10.21428/eea8ec7d.e281f63f",
    "community": "10.21428/eea8ec7d",
    "pub": "10.21428/eea8ec7d.1519656b",
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for an issue 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "journal": Object {
          "journal_issue": Object {
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Massachusetts Institute of Technology",
                  "given_name": "Travis",
                  "surname": "Rich",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Gabriel",
                  "surname": "Stein",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Catherine",
                  "surname": "Ahearn",
                },
                Object {
                  "@contributor_role": "author",
                  "@sequence": "additional",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
              ],
            },
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d.e281f63f",
              "resource": "https://dev.pubpub.org/collection/e281f63f",
              "timestamp": 1555009335577,
            },
            "issue": "5",
            "journal_volume": Object {
              "volume": "2",
            },
            "publication_date": Object {
              "@media_type": "online",
              "day": "25",
              "month": "03",
              "year": "2017",
            },
            "titles": Object {
              "title": "Another Great Issue",
            },
          },
          "journal_metadata": Object {
            "@language": "en",
            "abbrev_title": "PubPub Dev",
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d",
              "resource": "https://frankdev.pubpub.org",
              "timestamp": 1555009335577,
            },
            "full_title": "PubPub Dev",
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "pubpub@media.mit.edu",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": "10.21428/eea8ec7d.e281f63f",
    "community": "10.21428/eea8ec7d",
    "pub": undefined,
  },
  "timestamp": 1555009335577,
}
`;

exports[`createDeposit creates a deposit for an issue without any date information 1`] = `
Object {
  "deposit": Object {
    "doi_batch": Object {
      "@version": "4.4.1",
      "@xmlns": "http://www.crossref.org/schema/4.4.1",
      "@xmlns:xsi": "http://www.w3.org/2001/XMLSchema-instance",
      "@xsi:schemaLocation": "http://www.crossref.org/schema/4.4.1 http://www.crossref.org/schema/deposit/crossref4.4.1.xsd",
      "body": Object {
        "journal": Object {
          "journal_issue": Object {
            "contributors": Object {
              "person_name": Array [
                Object {
                  "@contributor_role": "author",
                  "@sequence": "first",
                  "affiliation": "Massachusetts Institute of Technology",
                  "given_name": "Travis",
                  "surname": "Rich",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Gabriel",
                  "surname": "Stein",
                },
                Object {
                  "@contributor_role": "reader",
                  "@sequence": "additional",
                  "given_name": "Catherine",
                  "surname": "Ahearn",
                },
                Object {
                  "@contributor_role": "author",
                  "@sequence": "additional",
                  "affiliation": "Springfield A&M",
                  "given_name": "Ian",
                  "surname": "Reynolds",
                },
              ],
            },
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d.e281f63f",
              "resource": "https://dev.pubpub.org/collection/e281f63f",
              "timestamp": 1555009335577,
            },
            "issue": "5",
            "journal_volume": Object {
              "volume": "2",
            },
            "publication_date": Object {
              "@media_type": "online",
              "day": "11",
              "month": "04",
              "year": "2019",
            },
            "titles": Object {
              "title": "Another Great Issue",
            },
          },
          "journal_metadata": Object {
            "@language": "en",
            "abbrev_title": "PubPub Dev",
            "doi_data": Object {
              "doi": "10.21428/eea8ec7d",
              "resource": "https://frankdev.pubpub.org",
              "timestamp": 1555009335577,
            },
            "full_title": "PubPub Dev",
          },
        },
      },
      "head": Object {
        "depositor": Object {
          "depositor_name": "PubPub",
          "email_address": "pubpub@media.mit.edu",
        },
        "doi_batch_id": "1555009335577_eea8ec7d",
        "registrant": "PubPub",
        "timestamp": 1555009335577,
      },
    },
  },
  "dois": Object {
    "collection": "10.21428/eea8ec7d.e281f63f",
    "community": "10.21428/eea8ec7d",
    "pub": undefined,
  },
  "timestamp": 1555009335577,
}
`;
